mucking with -Djava.ext.dirs turns out to be a bad idea